0.1.0-next:
 * server: accept multiple config files
 * client: accept host and port options

0.1.0:
 * first release